Bug: button not visible on iPhone X

--- a/matraum-app/src/app/pages/scan-page/scan-page.component.sass
+++ b/matraum-app/src/app/pages/scan-page/scan-page.component.sass
@@ -14,7 +14,7 @@
 h1
   width: 100%
   text-align: center
-  line-height: 100px
+  line-height: 25px
   margin: 0
 
 
@@ -43,7 +43,7 @@ h1
   display: grid
   place-items: center
   overflow: hidden
-  max-height: 300px
+  max-height: 500px
   transition: all 0.3s ease-out
   background-color: white
   margin-top: -300px
